--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="./img/home.jpeg" alt="Home Image">
+            <img src="./home.jpeg" alt="Home Image">
         </div>
     </section>
        
@@ -49,7 +49,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="./img/home.jpeg" alt="About Image">
+            <img src="./home.jpeg" alt="About Image">
             <span class="circle-spin"></span>
         </div>
 
